[SoundManager] Introduce sound effects for game actions and GUI interactions
Introduced sound manager, along with sounds, for most actions within the game.

The start menu, lobby, and game screen all have different background musics. Most buttons now have an auditory feedback.
Game actions, such as placing a totem or picking a card also have sounds associated with them.